add platform specific endpoints in openapi documentation
